# mt-auto-minhon-mlt

./: README.md  pyproject.toml
.github/workflows/: python-app.yml  python-publish.yml
src/mt_auto_minhon_mlt/: __init__.py  tranlator.py
tests/: test_tranlator.py
tools/: create_support_translate.py
